# langchain-mastery

./: .gitignore  README.md  ollama_req.json  pyproject.toml
models/: chatmodels.py
models/Chatmodels/: __init__.py  chatmodels.py
models/EmbeddingModels/: __init__.py
outputparser/: llm_with_builtIn_parsers.ipynb  menu.txt  output_parser.ipynb  restuarant_agent.py
