[project]
name = "langchain-mastery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.17",
    "langchain-anthropic>=1.4.2",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langchain-qdrant>=1.1.0",
    "langchain-tavily>=0.2.18",
    "pip>=26.1",
    "python-dotenv>=1.2.2",
]
